; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/lwip/src/extr_rostcp.c_LibTCPDumpPcb.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/lwip/src/extr_rostcp.c_LibTCPDumpPcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_pcb = type { i64, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"\09State: %s\0A\00", align 1
@tcp_state_str = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [28 x i8] c"\09Remote: (%d.%d.%d.%d, %d)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LibTCPDumpPcb(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.tcp_pcb*, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = inttoptr i64 %5 to %struct.tcp_pcb*
  store %struct.tcp_pcb* %6, %struct.tcp_pcb** %3, align 8
  %7 = load %struct.tcp_pcb*, %struct.tcp_pcb** %3, align 8
  %8 = getelementptr inbounds %struct.tcp_pcb, %struct.tcp_pcb* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @ntohl(i32 %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32*, i32** @tcp_state_str, align 8
  %13 = load %struct.tcp_pcb*, %struct.tcp_pcb** %3, align 8
  %14 = getelementptr inbounds %struct.tcp_pcb, %struct.tcp_pcb* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 (i8*, i32, ...) @DbgPrint(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = load i32, i32* %4, align 4
  %20 = lshr i32 %19, 24
  %21 = and i32 %20, 255
  %22 = load i32, i32* %4, align 4
  %23 = lshr i32 %22, 16
  %24 = and i32 %23, 255
  %25 = load i32, i32* %4, align 4
  %26 = lshr i32 %25, 8
  %27 = and i32 %26, 255
  %28 = load i32, i32* %4, align 4
  %29 = and i32 %28, 255
  %30 = load %struct.tcp_pcb*, %struct.tcp_pcb** %3, align 8
  %31 = getelementptr inbounds %struct.tcp_pcb, %struct.tcp_pcb* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 (i8*, i32, ...) @DbgPrint(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %21, i32 %24, i32 %27, i32 %29, i32 %32)
  ret void
}

declare dso_local i32 @ntohl(i32) #1

declare dso_local i32 @DbgPrint(i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
